# contextrot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHOWCASE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  share_your_curve.yml
.github/workflows/: ci.yml  release.yml
docs/: methodology.md
npm/: README.md  package.json
src/contextrot/: __init__.py  __main__.py  calibration.py  cli.py  hook.py  install.py  mcp.py  models.py  pricing.py  statusline.py
src/contextrot/adapters/: __init__.py  base.py  claude_code.py  cline.py  codex.py  gemini_cli.py  opencode.py
src/contextrot/analysis/: __init__.py  by_model.py  by_project.py  by_source.py  composition.py  fixes.py  prescriptions.py  rot.py  trends.py
src/contextrot/report/: __init__.py  _hero.py  badge.py  html.py  template.html.j2  terminal.py
src/contextrot/signals/: __init__.py
src/ctxprof/: __init__.py  cli.py  pricing.py
src/ctxprof/adapters/: __init__.py  base.py  claude_code.py
src/ctxprof/analysis/: __init__.py  composition.py  prescriptions.py  rot.py
src/ctxprof/report/: __init__.py  html.py  template.html.j2  terminal.py
src/ctxprof/signals/: __init__.py
tests/: test_adapter_claude_code.py  test_adapter_cline.py  test_adapter_codex.py  test_adapter_gemini_cli.py  test_adapter_opencode.py  test_adapter_opencode_json.py  test_badge.py  test_by_model.py  test_by_project.py  test_by_source.py  test_calibration.py  test_cli.py  test_fixes.py  test_hook.py  test_load_sessions.py  test_mcp.py  test_report_html.py  test_rot.py  test_signals.py  test_statusline.py  test_trends.py
tests/fixtures/demo-project/: 11111111-2222-3333-4444-555555555555.jsonl
