[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextrot"
version = "0.5.0"
description = "Find out where your coding agent starts degrading. Personal context-rot analytics from your own agent sessions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Priyanshu Doshi" }]
keywords = [
    "llm",
    "claude-code",
    "context-engineering",
    "context-rot",
    "agents",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/Priyanshu-byte-coder/contextrot"
Repository = "https://github.com/Priyanshu-byte-coder/contextrot"
Issues = "https://github.com/Priyanshu-byte-coder/contextrot/issues"

[project.scripts]
contextrot = "contextrot.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contextrot"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
